2010-10-31  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-insert-file-contents): For root,
	preserve owner and group when editing files.  (Bug#7289)

2010-10-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* speedbar.el (speedbar-mode):
	* play/fortune.el (fortune-in-buffer, fortune):
	* play/gomoku.el (gomoku-mode):
	* play/landmark.el (lm-mode):
	* textmodes/bibtex.el (bibtex-validate, bibtex-validate-globally):
	Replace inappropriate uses of toggle-read-only.  (Bug#7292)

2010-10-31  Glenn Morris  <rgm@gnu.org>

	* select.el (x-selection): Mark it as an obsolete alias.

2010-10-31  Aaron S. Hawley  <aaron.s.hawley@gmail.com>

	* add-log.el (find-change-log): Use derived-mode-p rather than
	major-mode (bug#7284).

2010-10-31  Glenn Morris  <rgm@gnu.org>

	* menu-bar.el (menu-bar-files-menu): Make it into an actual alias,
	rather than just an unused variable that inherits from the real one.

2010-10-31  Glenn Morris  <rgm@gnu.org>

	* comint.el (comint-password-prompt-regexp):
	Match "enter the password".  (Bug#7224)

2010-10-31  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-cmds.el (c-mask-paragraph): Fix an off-by-1 error.
	This fixes bug #7185.

2010-10-30  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): Search for package directories, and
	don't load package.el if none are found.

	* emacs-lisp/package.el (describe-package, list-packages): Call
	package-initialize if it has not been called yet.

2010-10-30  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-fonts.el (c-font-lock-enum-tail): New function
	which fontifies the tail of an enum.
	(c-basic-matchers-after): Insert a call to the above new function.
	This fixes bug #7264.

2010-10-30  Glenn Morris  <rgm@gnu.org>

	* cus-start.el: Add :set properties for minor modes menu-bar-mode,
	tool-bar-mode, transient-mark-mode.  (Bug#7306)
	Include the :set property in the dumped Emacs.

2010-10-29  Stefan Monnier  <monnier@iro.umontreal.ca>
